--- a/src/app/instructor-components/instructor-profile/instructor-profile.component.html
+++ b/src/app/instructor-components/instructor-profile/instructor-profile.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-auto my-auto">
         <div class="h-100">
-          <h5 class="mb-1">Bill Gates</h5>
+          <h5 class="mb-1">{{name}}</h5>
           <p class="mb-0 font-weight-bold text-sm">CEO / Co-Founder</p>
         </div>
       </div>
