--- a/src/app/layouts/admin-navbar/admin-navbar.component.html
+++ b/src/app/layouts/admin-navbar/admin-navbar.component.html
@@ -20,7 +20,7 @@
                 <li class="nav-item d-flex align-items-center">
                   <a  class="nav-link text-body font-weight-bold ">
                     <i class="fa fa-user me-sm-1 text-light px-1 "></i>
-                    <span class="d-sm-inline d-none text-light">Profil</span>
+                    <span class="d-sm-inline d-none text-light">{{name}}</span>
                   </a>
                 </li>
                 <ul class="dropdown-menu dropdown-menu-right px-2 py-3 ms-n4" aria-labelledby="dropdownMenuButton">
