--- a/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
+++ b/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
@@ -19,11 +19,11 @@
             Kara Liste
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-blacklist">
             {{name}}
           </a>
-        </li>
+        </li> -->
         <li>
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-list">
             Eğitmen Listesi
@@ -37,7 +37,7 @@
         <li class="nav-item">
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
-            Profile
+            {{name}}
           </a>
         </li>
         <li class="nav-item">
