--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
-<body class="g-sidenav-show  bg-gray-100 ">
+<body class="g-sidenav-show  bg-gray-100">
     <aside class=" sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
      
       <hr class="horizontal dark mt-0">
       <div class=" collapse navbar-collapse w-auto side-resp ghj" id="sidenav-collapse-main">
         <ul class="navbar-nav mt-7">
           <li class="nav-item mb-3">
-            <a class="nav-link  " routerLink="/admin">
+            <a class="nav-link  " routerLink="admin-main-page">
               <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>shop </title>
