--- a/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
+++ b/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
@@ -148,7 +148,7 @@
         <li class="nav-item">
           <a class="nav-link me-2 text-light fs-6" routerLink="applicant-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
-            Profile
+            {{name}}
           </a>
         </li>
         <li class="nav-item">
