--- a/src/app/layouts/admin-navbar/admin-navbar.component.html
+++ b/src/app/layouts/admin-navbar/admin-navbar.component.html
@@ -18,9 +18,9 @@
             <div class="col-auto m-auto">
               <div class="dropdown cbc">
                 <li class="nav-item d-flex align-items-center">
-                  <a  class="nav-link text-body font-weight-bold ">
+                  <a  class="nav-link text-body font-weight-bold " routerLink="admin-main-page">
                     <i class="fa fa-user me-sm-1 text-light px-1 "></i>
-                    <span class="d-sm-inline d-none text-light">{{name}}</span>
+                    <span class="d-sm-inline d-none text-light">{{fullName}}</span>
                   </a>
                 </li>
                 <ul class="dropdown-menu dropdown-menu-right px-2 py-3 ms-n4" aria-labelledby="dropdownMenuButton">
