--- a/src/app/instructor-components/instructor-applicant-list/instructor-applicant-list.component.html
+++ b/src/app/instructor-components/instructor-applicant-list/instructor-applicant-list.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3 mt-8" *ngFor="let applicant of applicants">
+    <h3 class="text-center mt-4" style="font-weight: 500;">Aday Listesi</h3>
+    <div class="col-md-3 mt-5" *ngFor="let applicant of applicants">
       <div class="card x">
         <img class="card-img-top" src={{applicant.img}}>
         <div class="position-relative"
