--- a/src/app/instructor-components/instructor-blacklist/instructor-blacklist.component.html
+++ b/src/app/instructor-components/instructor-blacklist/instructor-blacklist.component.html
@@ -1,5 +1,7 @@
 <div class="container">
   <div class="row">
+    <h3 class="text-center mt-4" style="font-weight: 500;">Kara Liste</h3>
+
     <div class="col-md-4 mt-8" *ngFor="let blacklist of blacklists">
       <div class="card x">
         <img class="card-img-top"
