home page fixes and changes

--- a/src/app/assets/css/ekip.css
+++ b/src/app/assets/css/ekip.css
@@ -17,7 +17,7 @@
   box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
   text-align: center;
   transition: all 0.4s;
-  background: url(https://unsplash.it/600/800?image=1061) center no-repeat;
+  background: url(https://i.ibb.co/3Y5dQ2B/Whats-App-G-rsel-2022-12-10-saat-21-48-53.jpg) center no-repeat;
   background-size: 100%;
 }
 .blog-card a {
