--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -127,21 +127,21 @@ Latest commit e0832d3 2 hours ago
 
 
 
-    <div class="container mt-10">
+    <div class="container ">
       <div class="row">
         <div class="col-12 caro ">
           <carousel class="shadow caros">
             <slide class="opacity-100">
-              <img src="https://i.ibb.co/mNxB2MF/Bootcampler.png" alt="first slide"
-                style="display: block; width: 100%;">
+              <img src="https://i.ibb.co/Stq7kgD/img.jpg" alt="first slide"
+                style="display: block; width: 80%;">
             </slide>
             <slide class="opacity-100">
               <img src="https://i.ibb.co/C9krHhg/Bootcampler-1.png" alt="second slide"
-                style="display: block; width: 100%;">
+                style="display: block; width: 80%;">
             </slide>
             <slide class="opacity-100">
-              <img src="https://i.ibb.co/1rqZQWg/Bootcampler-2.png" alt="third slide"
-                style="display: block; width: 100%;">
+              <img src="https://i.ibb.co/LJjCnnk/2.jpg" alt="third slide"
+                style="display: block; width: 80%;">
             </slide>
           </carousel>
         </div>
@@ -150,7 +150,7 @@ Latest commit e0832d3 2 hours ago
 
     <!-- carousel end  -->
 
-    <div class="bg-gradient-light mt-5 shadow" style="padding: 100px 0;">
+    <div class="bg-gradient-light bground mt-5 shadow" style="padding: 100px 0;">
       <div class="container">
         <div class="col-12 text-center ">
           <h3 class="mb-4"> Neden Pair 4 Academy ? </h3>
@@ -177,7 +177,7 @@ Latest commit e0832d3 2 hours ago
 
 
     <!-- eğitmenler start -->
-    <div class="container-fluid ">
+    <div class="container-fluid mb-5 ">
       <div class="container px-3">
         <div class="row ">
           <div class="col-lg-12">
@@ -193,11 +193,11 @@ Latest commit e0832d3 2 hours ago
 
               <div class="col-3">
                 <a href="" class="card">
-                  <img src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg" class="card__image" alt="" />
+                  <img src="https://avatars.githubusercontent.com/u/10206539?v=4" style="width: 300px; " class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
-                      <img class="card__thumb" src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg" alt="" />
+                      <img class="card__thumb" src="https://avatars.githubusercontent.com/u/10206539?v=4" alt="" />
                       <div class="card__header-text">
                         <h3 class="card__title x">Engin Demiroğ</h3>            
                         <span class="card__status x">Software Developer</span>
@@ -210,14 +210,14 @@ Latest commit e0832d3 2 hours ago
 
               <div class="col-3">
                 <a href="" class="card">
-                  <img src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg"  class="card__image" alt="" />
+                  <img src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg" style="width: 300px; "  class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <img class="card__thumb" src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg" alt="" />
                       <div class="card__header-text">
                         <h3 class="card__title x">Enes Bin Malik Köksal</h3>            
-                        <span class="card__status x">Eğitim Uzmanı</span>
+                        <span class="card__status x">Eğitim Uzman Yardımcısı</span>
                       </div>
                     </div>
                     <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
@@ -228,39 +228,39 @@ Latest commit e0832d3 2 hours ago
 
               <div class="col-3">
                 <a href="" class="card">
-                  <img src="https://i.ibb.co/brfMGYN/1577f867-7520-43f1-87c4-d72ab84dca09.jpg" style="width: 280px; height:310px; " class="card__image" alt="" />
+                  <img src="https://media-exp1.licdn.com/dms/image/C5603AQHjtZ0K9H-MrQ/profile-displayphoto-shrink_800_800/0/1516853140833?e=1675900800&v=beta&t=-9oE28tTRL02BQJUIkf9IHVywztnJ_T-0MuRwupvUUI" style="width: 300px; height:310px; " class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
-                      <img class="card__thumb" src="https://i.ibb.co/brfMGYN/1577f867-7520-43f1-87c4-d72ab84dca09.jpg" alt="" />
+                      <img class="card__thumb" src="https://media-exp1.licdn.com/dms/image/C5603AQHjtZ0K9H-MrQ/profile-displayphoto-shrink_800_800/0/1516853140833?e=1675900800&v=beta&t=-9oE28tTRL02BQJUIkf9IHVywztnJ_T-0MuRwupvUUI" alt="" />
                       <div class="card__header-text">
-                        <h3 class="card__title x">Serhat Taşçı</h3>            
-                        <span class="card__status x">Software Developer</span>
+                        <h3 class="card__title x">Kenan Yavuz</h3>            
+                        <span class="card__status x">Çasgem Başkan</span>
                       </div>
                     </div>
                     <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
                   </div>
                 </a>  
               </div>
-
-
 
               <div class="col-3">
                 <a href="" class="card">
-                  <img src="https://i.ibb.co/bgzHXdc/43ca8dab-dfe8-4e2a-8e44-f9e0441014be.jpg" style="width: 280px; " class="card__image" alt="" />
+                  <img src="https://media-exp1.licdn.com/dms/image/C5603AQElngeK3wBOVw/profile-displayphoto-shrink_800_800/0/1540907275706?e=1675900800&v=beta&t=ZRavOP2UR5nCVnI2ye8ZwDJQrupHct-GkGMuSTWcIA4"  class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
-                      <img class="card__thumb" src="https://i.ibb.co/bgzHXdc/43ca8dab-dfe8-4e2a-8e44-f9e0441014be.jpg" alt="" />
+                      <img class="card__thumb" src="https://media-exp1.licdn.com/dms/image/C5603AQElngeK3wBOVw/profile-displayphoto-shrink_800_800/0/1540907275706?e=1675900800&v=beta&t=ZRavOP2UR5nCVnI2ye8ZwDJQrupHct-GkGMuSTWcIA4" alt="" />
                       <div class="card__header-text">
-                        <h3 class="card__title x">Engin Demiroğ</h3>            
-                        <span class="card__status x">Software Developer</span>
+                        <h3 class="card__title x">idris Taş</h3>            
+                        <span class="card__status x">Çasgem Genel Koordinatörü</span>
                       </div>
                     </div>
                     <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
                   </div>
                 </a>  
               </div>
+
+
 
               
 
@@ -429,7 +429,7 @@ Latest commit e0832d3 2 hours ago
 
 
 
-    <div class="mb-9  bg-gradient-light shadow" style="padding: 70px 0;">
+    <div class="mb-9  bground shadow" style="padding: 70px 0;">
       <div class="container ">
         <a name="bootcampler">
           <h3 class="text-center mb-7 mt-5">Bootcamp süreci</h3>
@@ -635,29 +635,30 @@ Latest commit e0832d3 2 hours ago
         <!-- bootcampler end -->
 
         <!-- hakkımızda start -->
-        <div class="shadow mb-4 py-5">
+        <div class="mb-9 mt-5 bground shadow" style="padding: 50px 0;">
           <div class="container ">
             <div class="row ">
               <a name="hakkımızda">
-                <h3 class="text-center mb-7  mt-8">Hakkımızda</h3>
+                <h3 class="text-center text-dark mb-3 mt-5">Hakkımızda</h3>
+                <h4 class="text-center text-dark mb-5">Teknolojiye hazırlanan bir gençlik ve daha iyi bir gelecek!</h4>
               </a>
+              
+
 
               <div class="col-6">
+                <img width="100%" src="https://i.ibb.co/2yqQjSQ/Ekran-g-r-nt-s-2022-12-07-212548.jpg" alt="">
 
+                
+
+              </div>
+              <div class="col-6 text-start text-dark mb-5">
                 <p>Kodluyoruz, Türkiye’de dünya çapında yazılımcılar yetiştirmek için çalışan, ülkemizi bir teknoloji
                   geliştirme merkezi yapmayı hedefleyen bir sosyal girişim.</p>
                 <p>Kodluyoruz olarak <strong> en temel hedeflerimiz:</strong></p>
-                <ul>
-                  <li> - Değerlerimizi gözeterek, Türkiye’de yetişen yazılımcıların global ölçekte değer yaratacak
-                    yazılımcılar olmasına katkı sağlamak.</li>
-                  <li> - Liseden başlayarak, kariyer yolunda kariyer gelişimi ihtiyaçlarına cevap verebiliyor olmak.
-                  </li>
-                  <li> - Öğrencilerin kolayca kullanabileceği mekanizmanın kurulmasını sağlamak.</li>
-                </ul>
-
-              </div>
-              <div class="col-6">
-                <img width="100%" src="https://i.ibb.co/2yqQjSQ/Ekran-g-r-nt-s-2022-12-07-212548.jpg" alt="">
+                <p>Değerlerimizi gözeterek, Türkiye’de yetişen yazılımcıların global ölçekte değer yaratacak
+                  yazılımcılar olmasına katkı sağlamak.</p>
+                  <p>Liseden başlayarak, kariyer yolunda kariyer gelişimi ihtiyaçlarına cevap verebiliyor olmak.</p>
+              
               </div>
             </div>
 
@@ -668,7 +669,7 @@ Latest commit e0832d3 2 hours ago
          <!-- team start -->
         <div class="container">
           <div class="row">
-            <h3 class="text-center mt-5 mb-5">Ekibimiz</h3>
+            <h3 class="text-center mt-2 mb-5">Ekibimiz</h3>
             <div class="col-3">
               <div class="blog-card spring-fever">
                 <div class="title-content">
@@ -694,7 +695,7 @@ Latest commit e0832d3 2 hours ago
             </div>
 
             <div class="col-3">
-              <div class="blog-card spring-fever">
+              <div style="background: url(https://pbs.twimg.com/profile_images/1028670681620340736/u2U89A2c_400x400.jpg) center no-repeat; height:100%;" class="blog-card spring-fever">
                 <div class="title-content">
                   <h3><a href="#">Berkay Anduv</a></h3>
                   <div class="intro"> <a href="#">Frontend Developer</a> </div>
@@ -718,7 +719,7 @@ Latest commit e0832d3 2 hours ago
 
 
             <div class="col-3">
-              <div class="blog-card spring-fever">
+              <div class="blog-card spring-fever"  style="background: url(https://miro.medium.com/max/2400/1*LV8tB2fEYMSReispTnjcDw.jpeg) center no-repeat;">
                 <div class="title-content">
                   <h3><a href="#">Emircan Omak</a></h3>
                   <div class="intro"> <a href="#">Software Developer</a> </div>
@@ -743,7 +744,7 @@ Latest commit e0832d3 2 hours ago
 
 
             <div class="col-3">
-              <div class="blog-card spring-fever">
+              <div class="blog-card spring-fever" style="background: url(https://avatars.githubusercontent.com/u/49349272?v=4) center no-repeat;">
                 <div class="title-content">
                   <h3><a href="#">Hediye Yıldırım</a></h3>
                   <div class="intro"> <a href="#">Frontend Developer</a> </div>
@@ -781,7 +782,7 @@ Latest commit e0832d3 2 hours ago
          <!-- team end -->
 
         <!-- Referanslar Start-->
-        <div class="py-1 mt-6 mb-7 refback shadow bg-light">
+        <div class="py-1 mt-9 mb-7 refback bground shadow bg-light">
           <div class="container mt-5 ">
             <h3 class="text-center mb-5 col-md-12">Referanslar</h3>
             <div class="row mb-5 ">
@@ -857,6 +858,10 @@ Latest commit e0832d3 2 hours ago
             </div>
           </div>
         </div>
+
+        <!-- acordion start -->
+
+        
          <!-- Referanslar end-->
 
         <!-- <div class="container ">
