--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,13 +5,11 @@
     perspective: 1000px;
     font-family: sans-serif;
   }
-  h3,h1{
+  h3,h1, h2, h4{
     font-weight:500;
   }
   
- h3,h1{
-  font-weight: 500;
- }
+
 
   .title {
     font-size: 1.5em;
@@ -97,6 +95,14 @@ nav h4{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.bground{
+  background: #E0EAFC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  
+}
+
 
 
 /* Footer */
@@ -125,6 +131,7 @@ footer ul li {
 .footer{
 	background-color: #24262b;
     padding-top:50px;
+    /* width: 220vh; */
 }
 .footer-col{
    width: 25%;
@@ -323,12 +330,12 @@ ol, li {
  }
 
 .caro{
-  width: 75%;
+  width: 85%;
   margin: auto;
 }
 
 .caros img{
-  border-radius: 80px;
+  border-radius: 20px;
   box-shadow: inset 50px 50px 50px rgb(23, 2, 2);
 
 }
@@ -511,3 +518,7 @@ body {
 .card__overlay:hover .x{
   color: #8e5858;
 }
+
+
+/* acordion */
+
