add-localStorage to insructor-panel&toastr customization

--- a/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
+++ b/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
@@ -37,7 +37,7 @@
         <li class="nav-item">
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
-            {{name}}
+            <span class="d-sm-inline d-none text-light">{{fullName}}</span>
           </a>
         </li>
         <li class="nav-item">
