--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,9 +6,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0 hehz">
       <div class="container ">
-        <a class="navbar-brand " name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
+        <a class="navbar-brand" name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
           data-placement="bottom" target="_blank">
-          <h4 class="text-light">Pair 4 Academy</h4>
+          <img src="https://i.ibb.co/8085SdQ/Pa-Ir-1898-600-piksel.png" style="width: 35%;" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#bootcampler" class="nav-link text-body font-weight-bold">
+                    <a href="#bootcampler" class="nav-link text-body font-weight-bold asbc" >
                       <span class="d-sm-inline d-none text-light tt">BOOTCAMPLER</span>
                     </a>
                   </li>
@@ -33,7 +33,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#egitmenler" class="nav-link text-body font-weight-bold">
+                    <a href="#egitmenler" class="nav-link text-body font-weight-bold asbc">
                       <span class="d-sm-inline d-none text-light tt">EĞİTMENLER </span>
                     </a>
                   </li>
@@ -45,7 +45,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#hakkımızda" class="nav-link text-body font-weight-bold">
+                    <a href="#hakkımızda" class="nav-link text-body font-weight-bold asbc">
                       <span class="d-sm-inline d-none text-light tt">HAKKIMIZDA </span>
                     </a>
                   </li>
@@ -57,7 +57,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a routerLink="/home-login" class="nav-link text-body font-weight-bold">
+                    <a routerLink="/home-login" class="nav-link text-body font-weight-bold asbc">
                       <i class="fa fa-user me-sm-1 text-light px-1"></i>
                       <span class="d-sm-inline d-none text-light tt">GİRİŞ YAP </span>
                     </a>
@@ -68,7 +68,7 @@
               <div class="col-auto m-auto">
                 <div class="dropdown">
                   <li class="nav-item d-flex align-items-center">
-                    <a routerLink="/home-register" class="nav-link text-body font-weight-bold ">
+                    <a routerLink="/home-register" class="nav-link text-body font-weight-bold asbc">
                       <i class="fa fa-user me-sm-1 text-light px-1 "></i>
                       <span class="d-sm-inline d-none text-light tt">KAYIT OL</span>
                     </a>
@@ -92,12 +92,12 @@
 
     <!-- carousel  -->
 
-    <div class=" eae mt-5">
+    <div class="eae my-9 mx-auto">
       <div class="row">
-        <div class="col-12 caro ">
+        <div class="col-12 ">
           <carousel class="shadow">
             <slide class="opacity-100">
-              <img src="https://images.unsplash.com/photo-1537511446984-935f663eb1f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=80" alt="first slide"
+              <img src="https://i.ibb.co/vZNqf6b/PAIR-4-1.png" alt="first slide"
                 style="display: block;">
             </slide>
             <slide class="opacity-100">
@@ -279,24 +279,19 @@
             </p>
 
           </div>
-
-
         </div>
       </div>
     </div>
-
     <div>
       <div class="container-fluid ">
          <!-- bootcampler start -->
         <div>
           <div class="container-fluid">
-
             <div class="row">
               <div class="col-6" style="padding-left: 50px;">
                 <div class="row">
 
                   <h3 class="text-center mb-6">Bootcampler</h3>
-
 
                   <div class="col-4 mb-5">
                     <div class="flip-card">
@@ -313,7 +308,6 @@
                       </div>
                     </div>
                   </div>
-
 
                   <div class="col-4">
                     <div class="flip-card">
@@ -394,7 +388,6 @@
                       </div>
                     </div>
                   </div>
-
                 </div>
               </div>
 
