add-localStorage to applicant-panel&profile page

--- a/src/app/applicant-components/applicant-profile/applicant-profile.component.html
+++ b/src/app/applicant-components/applicant-profile/applicant-profile.component.html
@@ -1,29 +1,149 @@
-<div class="container mt-8"></div>
-<div class="row">
-    <!-- <div class="col-md-6">
-        <div class="bg-light rounded border p-5 shadow-lg mt-4" style="height: 100%">
-            <div style="display: flex; justify-content: space-evenly; margin-top: 10px">
-                <div>
-                    <h2>Duyurular</h2>
-                </div>
-            </div>
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col" style="text-align: center">Önemli!!</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td style="color: red; text-align: center">Frontend bootcamp başvuru bitişine az kaldı.</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+
+<div class="container mt-7">
+    <div
+      class="page-header min-height-300 border-radius-xl mt-4"
+      style="
+        background-image: url('https://i.pinimg.com/564x/28/3d/dc/283ddc3bff90c10c9c1ed3e504cf7349.jpg');
+      "
+    >
+      <span class="mask bg-gradient-dark opacity-6"></span>
+    </div>
+    <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
+      <div class="row gx-4">
+        <div class="col-auto">
+          <div class="avatar avatar-xl position-relative">
+            <img
+              src="{{localImg}}"
+              alt="profile_image"
+              class="w-100 border-radius-lg shadow-sm"
+            />
+          </div>
         </div>
-    </div> -->
+        <div class="col-auto my-auto">
+          <div class="h-100">
+            <h5 class="mb-1">{{fullName}}</h5>
+            <p class="mb-0 font-weight-bold text-sm">Aday</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
+          <div class="nav-wrapper position-relative end-0">
+            <ul class="nav nav-pills nav-fill p-1 bg-transparent" role="tablist">
+              <li class="nav-item ">
+                <a
+                  class="nav-link mb-0 px-0 py-1"
+                  data-bs-toggle="tab"
+                  href="javascript:;"
+                  role="tab"
+                  aria-selected="false"
+                  (click)="logout()"
+                >
+                  <svg
+                    class="text-dark"
+                    width="16px"
+                    height="16px"
+                    viewBox="0 0 40 40"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <title>settings</title>
+                    <g
+                      stroke="none"
+                      stroke-width="1"
+                      fill="none"
+                      fill-rule="evenodd"
+                    >
+                      <g
+                        transform="translate(-2020.000000, -442.000000)"
+                        fill="#FFFFFF"
+                        fill-rule="nonzero"
+                      >
+                        <g transform="translate(1716.000000, 291.000000)">
+                          <g transform="translate(304.000000, 151.000000)">
+                            <polygon
+                              class="color-background"
+                              opacity="0.596981957"
+                              points="18.0883333 15.7316667 11.1783333 8.82166667 13.3333333 6.66666667 6.66666667 0 0 6.66666667 6.66666667 13.3333333 8.82166667 11.1783333 15.315 17.6716667"
+                            ></polygon>
+                            <path
+                              class="color-background"
+                              d="M31.5666667,23.2333333 C31.0516667,23.2933333 30.53,23.3333333 30,23.3333333 C29.4916667,23.3333333 28.9866667,23.3033333 28.48,23.245 L22.4116667,30.7433333 L29.9416667,38.2733333 C32.2433333,40.575 35.9733333,40.575 38.275,38.2733333 L38.275,38.2733333 C40.5766667,35.9716667 40.5766667,32.2416667 38.275,29.94 L31.5666667,23.2333333 Z"
+                              opacity="0.596981957"
+                            ></path>
+                            <path
+                              class="color-background"
+                              d="M33.785,11.285 L28.715,6.215 L34.0616667,0.868333333 C32.82,0.315 31.4483333,0 30,0 C24.4766667,0 20,4.47666667 20,10 C20,10.99 20.1483333,11.9433333 20.4166667,12.8466667 L2.435,27.3966667 C0.95,28.7083333 0.0633333333,30.595 0.00333333333,32.5733333 C-0.0583333333,34.5533333 0.71,36.4916667 2.11,37.89 C3.47,39.2516667 5.27833333,40 7.20166667,40 C9.26666667,40 11.2366667,39.1133333 12.6033333,37.565 L27.1533333,19.5833333 C28.0566667,19.8516667 29.01,20 30,20 C35.5233333,20 40,15.5233333 40,10 C40,8.55166667 39.685,7.18 39.1316667,5.93666667 L33.785,11.285 Z"
+                            ></path>
+                          </g>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                  <span class="ms-1">Çıkış</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="container py-5">
+    <div class="row">   
+  
+      <div class="col-3 mb-5 ">
+        <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+          <div class="card-header  bg-gradient-light">
+            <h6>Toplam Bootcamp Sayısı</h6>
+          </div>
+          <div class="card-body">
+            <p>Toplam : {{bootcamps.length}}</p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-3">
+        <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+          <div class="card-header  bg-gradient-light">
+            <h6>Toplam aday Sayısı</h6>
+          </div>
+          <div class="card-body">
+            <p>Toplam : {{applicants.length}} </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-3 ">
+        <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+          <div class="card-header  bg-gradient-light">
+            <h6>Toplam Başvuru Sayısı</h6>
+          </div>
+          <div class="card-body">
+            <p>Toplam : {{applications.length}}</p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-3">
+        <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+          <div class="card-header  bg-gradient-light">
+            <h6>Toplam Eğitmen Sayısı</h6>
+          </div>
+          <div class="card-body">
+            <p>Toplam : {{instructors.length}}</p>
+          </div>
+        </div>
+      </div>
+      
+      
+  
+    </div>
+  </div>
+  <div class="container mt-3"></div>
+<div class="row">
+   
     <div class="col-md-12">
         <div class="bg-light rounded border p-5 shadow-lg mt-4" style="height: 100%">
             <div style="display: flex; justify-content: space-evenly; margin-top: 10px">
@@ -44,19 +164,16 @@
                     <tbody>
                         <tr *ngFor="let application of applications">
                             <td style="text-align: center">{{application.bootcampName}}</td>
-                            <!-- <td style="text-align: center">{{application.userName}}</td> -->
-                            <td style="text-align: center">{{application.state==1?"Sonuçlandırılmadı":"Reddedildi"}}
-                            </td>
-                            <!-- <td>
-                                <button (click)="delete(application.id)" type="button"
-                                    class="btn btn-outline-danger m-2 shadow">
-                                    Başvuruyu İptal Et
-                                </button>
-                            </td> -->
-                        </tr>
+                             <td style="text-align: center">{{application.userName}}</td> 
+                             <td style="text-align: center">{{application.state==1?"Sonuçlandırılmadı":"Reddedildi"}}
+                            </td> 
+                          
+                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-</div>
+</div> 
+
+  
