change-db&rever-blacklist-remove-reverse

--- a/src/app/components/black-list/create-black-list/create-black-list.component.html
+++ b/src/app/components/black-list/create-black-list/create-black-list.component.html
@@ -15,7 +15,6 @@
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-dark ps-2">Aday Adı</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder text-dark">Tarih</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder text-dark">Neden</th>
-                
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder text-dark"> İşlemler</th>
 
                 
@@ -25,7 +24,7 @@
                 <tr>
               
                   <td class="align-middle text-center text-sm">
-                    <span class="mb-0 text-sm">{{blacklist.applicantName}}</span>
+                    <span class="mb-0 text-sm">{{blacklist.firstName}} {{blacklist.lastName}}</span>
                   </td>
                   <td class="align-middle text-center">
                     <span class="text-secondary text-xs font-weight-bold">{{blacklist.date}}</span>
