--- a/src/app/components/black-list/add-black-list/add-black-list.component.html
+++ b/src/app/components/black-list/add-black-list/add-black-list.component.html
@@ -3,8 +3,50 @@
     <h6 class="text-center mb-4" style=" font-size: 2rem;">Kara Liste Ekle</h6>
   </div>
   <div class="card-body px-0 pt-0 pb-2" >
-    <form  [formGroup]="addBlackListForm" >
-      <div class="form-group">
+    <form  [formGroup]="addBlackListForm">
+      
+  <div class="form-group">
+    <label for="example-text-input" class="form-control-label">Ad</label>
+    <input class="form-control" placeholder="ad" formControlName="firstName" type="text" id="example-text-input">
+  </div>
+    
+  <div class="form-group">
+    <label for="example-text-input" class="form-control-label">Soyad</label>
+    <input class="form-control" placeholder="ad" formControlName="lastName" type="text" id="example-text-input">
+  </div>
+
+  <div class="form-group">
+    <label for="example-text-input" class="form-control-label">Sebep</label>
+    <input class="form-control" placeholder="ad" formControlName="reason" type="text" id="example-text-input">
+  </div>
+
+  <div class="form-group">
+  <label for="example-text-input" class="form-control-label">date</label>
+  <input class="form-control" placeholder="ad" formControlName="date" type="text" id="example-text-input">
+  </div>
+    
+    
+    <button (click)="addBlacklist()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/employee">Geri Dön</button>
+    </form>
+  </div>
+</div>
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      <!-- <div class="form-group">
         <select class="form-select" aria-label="Default select example " id="applicantId" formControlName="applicantId" class="form-control">
           <option value="" disabled selected>İsim Seç</option>
           <option *ngFor="let applicant of applicants" [value]="applicant.id">
@@ -12,8 +54,6 @@
           </option>
           
         </select>
-        <!-- <label for="example-number-input" class="form-control-label">Applicant Id</label>
-        <input class="form-control"  placeholder="applicantId" formControlName="applicantId"  value="23" id="example-number-input"> -->
     </div>
     <div class="form-group">
       <label for="example-date-input" class="form-control-label">Tarih</label>
@@ -28,4 +68,4 @@
     <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">GERİ Dön</button>
     </form>
   </div>
-</div>
+</div> -->
