add toastr to instructor

--- a/src/app/instructor-components/instructor-blacklist/instructor-blacklist.component.html
+++ b/src/app/instructor-components/instructor-blacklist/instructor-blacklist.component.html
@@ -39,7 +39,7 @@
           <p>
             {{blacklist.reason}}
           </p>
-          <a class="text-primary icon-move-right"
+          <a class="text-primary icon-move-right" style="cursor: pointer;"
             (click)="deleteUserFromBlacklist(blacklist.id, blacklist.applicantId)">Engeli Kaldır
             <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
           </a>
