change home carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0 hehz">
       <div class="container ">
         <a class="navbar-brand" name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
-          data-placement="bottom" target="_blank">
-          <img src="https://i.ibb.co/8085SdQ/Pa-Ir-1898-600-piksel.png" style="width: 35%;" alt="">
+          data-placement="bottom" target="_blank" >
+          <img  src="https://i.ibb.co/8085SdQ/Pa-Ir-1898-600-piksel.png" style="width: 35%;"  alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
             <div class="row">
               <div class="col-auto m-auto">
 
-                <a class="text-white cursor-pointer">
+                <a name="home" class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
                     <a href="#bootcampler" class="nav-link text-body font-weight-bold asbc" >
                       <span class="d-sm-inline d-none text-light tt">BOOTCAMPLER</span>
@@ -92,21 +92,22 @@
 
     <!-- carousel  -->
 
-    <div class="eae my-9 mx-auto">
+    <div class="eae my-7 mx-auto top-0">
       <div class="row">
         <div class="col-12 ">
-          <carousel class="shadow">
+          <carousel class="shadow" >
             <slide class="opacity-100">
-              <img src="https://i.ibb.co/vZNqf6b/PAIR-4-1.png" alt="first slide"
-                style="display: block;">
+              <img src="https://i.imgur.com/JtlOzMa.png" alt="first slide"
+                style="display: block; width: 100%;">
             </slide>
             <slide class="opacity-100">
-              <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=80" alt="second slide"
-                style="display: block;">
+              <img src="https://i.imgur.com/3zJ8LgV.png" alt="second slide"
+                style="display: block; width: 100%;">
             </slide>
             <slide class="opacity-100">
-              <img src="https://images.unsplash.com/photo-1552793494-111afe03d0ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=80" alt="third slide"
-                style="display: block;">
+              <img src="https://i.imgur.com/kEcNGYR.png" alt="third slide"
+                style="display: block; width: 100%;
+                ">
             </slide>
           </carousel>
         </div>
@@ -435,7 +436,7 @@
         <div class="mb-9 mt-5 bground shadow" style="padding: 50px 0;">
           <div class="container ">
             <div class="row ">
-              <a name="hakkımızda">
+              <a name="hakkimizda">
                 <h3 class="text-center text-dark mb-3 mt-5">Hakkımızda</h3>
                 <h4 class="text-center text-dark mb-5">Teknolojiye hazırlanan bir gençlik ve daha iyi bir gelecek!</h4>
               </a>
@@ -671,7 +672,7 @@
                   <li><a href="#home">Ana Sayfa</a></li>
                   <li><a href="#bootcampler">Bootcampler</a></li>
                   <li><a href="#egitmenler">Eğitmenler</a></li>
-                  <li><a>Hakkımızda</a></li>
+                  <li><a href="#hakkimizda">Hakkımızda</a></li>
                 </ul>
               </div>
               <div class="footer-col">
@@ -680,7 +681,6 @@
                   <li><a>Ödeme Sistemi</a></li>
                   <li><a>Aylık Üyelik</a></li>
                   <li><a>İçerik</a></li>
-                  <li><a>Cross-Play</a></li>
                 </ul>
               </div>
               <div class="footer-col">
